--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@hashgraph/sdk": "^2.67.0",
         "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
         "@prisma/client": "^5.19.1",
+        "@sendgrid/mail": "^8.1.6",
         "bcrypt": "^6.0.0",
         "hashconnect": "^3.0.13",
         "jsonwebtoken": "^9.0.2",
