--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
         "db:seed": "tsx prisma/seed.ts"
     },
     "dependencies": {
-        "@hashgraph/sdk": "^2.67.0",
+        "@hashgraph/hedera-wallet-connect": "^2.0.4-canary.3ca04e9.0",
+        "@hashgraph/sdk": "^2.77.0",
         "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
         "@prisma/client": "^5.19.1",
         "@sendgrid/mail": "^8.1.6",
         "bcrypt": "^6.0.0",
-        "hashconnect": "^3.0.14",
         "jsonwebtoken": "^9.0.2",
         "nuxt": "^3.13.0",
         "qrcode": "^1.5.4",
