--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@hashgraph/sdk": "^2.77.0",
         "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
         "@prisma/client": "^5.19.1",
+        "@reown/appkit": "^1.8.9",
         "@sendgrid/mail": "^8.1.6",
         "bcrypt": "^6.0.0",
         "jsonwebtoken": "^9.0.2",
